# rag-ai-foundry-sdk-custom-chat-app

./: .env.example  .gitignore  README.md  create_search_index.py  error_message.txt  evaluate.py  get_product_documents.py  pyproject.toml  requirements.txt
.github/workflows/: evaluate.yml
assets/: grounded_chat.prompty
eval/: evaluate.py
eval/output/: myevalresults.json
src/: chat_with_products.py  config.py
