[project]
name = "rag-ai-foundry-sdk-custom-chat-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13.dev0 || >=3.14.dev0,<4.0"
dependencies = [
    "azure-ai-projects (>=1.0.0b6,<2.0.0)",
    "azure-ai-inference[prompts] (>=1.0.0b9,<2.0.0)",
    "azure-identity (>=1.20.0,<2.0.0)",
    "azure-search-documents (>=11.5.2,<12.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "opentelemetry-api (>=1.30.0,<2.0.0)",
    "azure-monitor-opentelemetry (>=1.6.5,<2.0.0)",
    "azure-ai-evaluation[remote] (>=1.2.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
