[project]
name = "rag-ai-foundry-sdk-custom-chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-evaluation[remote]>=1.10.0",
    "azure-ai-inference[prompts]>=1.0.0b9",
    "azure-ai-projects==1.0.0b10",
    "azure-identity>=1.24.0",
    "azure-monitor-opentelemetry>=1.6.13",
    "azure-search-documents>=11.5.3",
    "opentelemetry-api>=1.36.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
